# constraint-propagation-example

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  constraint.hpp  example.cpp  expression.hpp  is_unconstrained.hpp  sym.hpp  symbol.hpp
detail/: static_instance.hpp  tuple_for_each.hpp  type_name.hpp
op/: identity.hpp  op_util.hpp  plus.hpp
tools/: BUILD.bazel
